style.css
/* ... */
.frame-2-desktop {
  font-size: 18px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0em;
  height: 24px;
  width: 96px;
  top: 8px;
  margin-top: 20px;
  display: flex;
  justify-content: flex-start;
  list-style-type: none;
  font-family: 'Poppins', sans-serif;
  color: #6b778c;
}

.frame-first-attribute {
  color: #344563;
  font-size: 18px;
  font-weight: 500;
  line-height: 24px;
}


@media screen and (max-width:768px) {
  .mobile-hide {
    display: none;
  }
}

@media screen and (min-width:768px) {
  body {
    width: 1440px;
    height: 916px;  
  }

  .desktop-hide {
    display: none;
  }

  .desktop-shown {
    display: contents;
  }
  
  .my-logo {
    width: 5%;
    height: auto;
    margin-top: 16px;
    margin-left: 155px;
  }

  .primary-info {
    background-image: url(Images/Header-1-bg-desktop.svg);
    background-repeat: no-repeat;
    background-size: cover;
    display: inline-block;
    background-position-x: 34.6px;
  }

  .header1 {
    margin-left: 260px;
    color: #091e42;
    height: 122px;
    width: 920px;
    font-size: 48px;
    line-height: 60px;
    letter-spacing: 0.3700000047683716px;
    text-align: left;
  }

  .primary-info-paragraph {
    margin-left: 260px;
    margin-right: 260px;
    height: 98px;
    width: 920px;
    font-size: 20px;
    font-weight: 400;
    line-height: 28px;
    color: #344563;
  }

  .lets-connect {
    margin-left: 260px;
  }

  .media-links {
    margin-left: 260px;
  }

  .contact-me-background {
    position: relative;
    background-image: url(Images/Header\ bottom\ desktop\ bg.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position-x: 9.5625rem;
  }

  #about-myself {
    display: grid;
    grid-template-columns: 50% 50%;
    background-color: #fff;
    border-top-right-radius: 6.25rem;
  }
  
  #desktop-grid-1 {
    grid-area: 1;
  }

  #desktop-grid-2 {
    grid-area: 2;
  }

  .languages-list {
    flex-direction: row;
  }

  .header2 {
    color: #091e42;
    height: 114px;
    width: 447px;
    font-size: 40px;
    font-weight: 700;
    line-height: 52px;
    text-align: left;
    margin-left: 142px;
    margin-top: 142px;
    margin-bottom: 12px;
  }

  #about-m-pag-desktop {
    height: 102px;
    width: 447px;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    color: #344563;
    margin-left: 142px;
    margin-bottom: 12px;
  }

  #about-m-letsconnect-desktop {
    margin-left: 142px;
    margin-bottom: 26px;
  }

  #about-m-media-links-desktop-margin {
    margin-left: 153px;
  }

  #about-me-desktop-button-margin {
    margin-left: 142px;
  }

  #about-me-desktop-lang-margin {
    margin-top: 166px;
  }

  .dev-language {
    flex-direction: column;
  }

  .margin-lang-frame {
    margin-right: 184px;
  }

  .desktop-lang-font {
    padding-bottom: 29px;
    height: 24px;
    font-size: 20px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0em;
    text-align: left;
    color: #344563;
  }

  .contact-me-background {
    position: relative;
    background-image: url(Images/contact\ form\ background\ shapes.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position-x: 75.34px;
    background-position-y: 79.09px;
  }

  .header-contact-me {
    margin-top: 142px;
    margin-bottom: 12px;
  }

  .contact-me-paragraph {
    height: 102px;
    margin-left: 436px;
    margin-right: 435px;
    margin-bottom: 12px;
    font-size: 20px;
    line-height: 28px;
  }
  
  #contact-me-form {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .contact-me-name {
    height: 48px;
    width: 447px;
    border-radius: 2px;
    margin-bottom: 27px
    padding: 0.9375rem 2.375rem 0.9375rem 1rem;
    border-radius: 0;
    color: #172b4d;
    text-align: center;
  }
  
  .contact-me-email {
    height: 48px;
    width: 447px;
    margin-bottom: 27px;
  }

  .contact-me-textarea {
    height: 170px;
    width: 447px;
    margin-bottom: 27px;
  }
   
  .contact-me-submit-button {
    margin-bottom: 127px;
  }
}

